--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Lab 3 - Robert Ross</title>
+        <title>Lab 4 - Robert Ross</title>
         <link href="css/lab3css.css" rel="stylesheet">
     </head>
     <body id="homepage">
@@ -11,11 +11,8 @@
         <div class="container">
             <div class="nav">
               <ul>
-                <li><a href="index.html">Lab 3</a></li>
-                <li><a href="studyworkmusic.html">Study/Work Music</a></li>
-                <li><a href="weather.html">Weather</a></li>
-                <li><a href="googledocs.html">Google Drive</a></li>
-                <li><a href="pollmaker.html">Poll Maker</a></li>
+                <li><a href="index.html">Page 1</a></li>
+                <li><a href="page2.html">Page 2</a></li>
               </ul>
             </div>
 
