--- a/lab4/page2.html
+++ b/lab4/page2.html
@@ -21,7 +21,7 @@
               <h1> Integrating Content from Authoring Tools </h1>
 
               <div class="boxedtext">
-                <p>This is a demonstration of my ability to embed a Lumi project into a webpage using iFrame.</p>
+                <p>This is a demonstration of my ability to embed a HotSpot Lumi project into a webpage using iFrame.</p>
               </div>
               
               <iframe width="900" height="1200" src="lesson2/index.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
