--- a/lab5/question2.html
+++ b/lab5/question2.html
@@ -60,7 +60,7 @@
               <div id="wrapper">
 
                 <div id="gohome">
-                  <a href="question1.html"><p>Home</p></a>
+                  <a href="question1.html"><p>HOME</p></a>
                 </div>
  
                 <h1>Dog Foraging Facts</h1>
