--- a/lab2/index.html
+++ b/lab2/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="wrapper">
             <div id="header">
-                <h1>Creating a Resource Database <em>(draft)</em></h1>
+                <h1>Creating a Resource Database</h1>
                 <h2>By Robert Ross</h2><br/>
             </div>
             <div id="step1">
